kubernetes/apps/observability/kube-prometheus-stack/app/httproute-alertmanager.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: alertmanager
spec:
  hostnames: ["alertmanager.${SECRET_DOMAIN}"]
  parentRefs:
    - name: envoy-internal
      namespace: network
      sectionName: https
  rules:
    - backendRefs:
        - name: kube-prometheus-stack-alertmanager
          port: 9093
