kubernetes/apps/observability/kube-prometheus-stack/app/httproute-prometheus.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: prometheus
spec:
  hostnames: ["prometheus.${SECRET_DOMAIN}"]
  parentRefs:
    - name: envoy-internal
      namespace: network
      sectionName: https
  rules:
    - backendRefs:
        - name: kube-prometheus-stack-prometheus
          port: 9090
